ceph OSD cluster 2 host

--- a/ceph/ceph.conf
+++ b/ceph/ceph.conf
@@ -10,15 +10,11 @@
     filestore xattr use omap = true
 
 [mon.a]
-    host = {{ grains['host'] }}
-    mon addr = {{ salt['network.ip_addrs']('eth0')[0] }}:6789
+    host = ubun1
+    mon addr = 192.168.122.30:6789
 
 [osd.0]
-    host = {{ grains['host'] }}
+    host = ubun1
     
 [osd.1]
-    host = {{ grains['host'] }}
-
-[mds.a]
-    host = {{ grains['host'] }}
-
+    host = ubun2
