--- a/ceph/ceph.conf
+++ b/ceph/ceph.conf
@@ -10,11 +10,11 @@
     filestore xattr use omap = true
 
 [mon.a]
-    host = ubun1
-    mon addr = 192.168.122.30:6789
+    host = {{ pillar['mon_a_host'] }}
+    mon addr = {{ pillar['mon_a_addr'] }}:6789
 
 [osd.0]
-    host = ubun1
+    host = {{ pillar['osd_0_host'] }}
     
 [osd.1]
-    host = ubun2
+    host = {{ pillar['osd_1_host'] }}
