--- a/essex/nova.conf
+++ b/essex/nova.conf
@@ -36,31 +36,31 @@ api_paste_config=/etc/nova/api-paste.ini
 allow_resize_to_same_host=True
 # APIS
 osapi_compute_extension=nova.api.openstack.compute.contrib.standard_extensions
-ec2_dmz_host=192.168.0.103
-s3_host=192.168.0.103
+ec2_dmz_host={{ pillar['nova']['address'] }}
+s3_host={{ pillar['nova']['address'] }}
 # RABBITMQ
-rabbit_host=192.168.0.103
+rabbit_host={{ pillar['nova']['address'] }}
 
 
 # GLANCE
 image_service=nova.image.glance.GlanceImageService
-glance_api_servers=192.168.0.103:9292
+glance_api_servers={{ pillar['nova']['address'] }}:9292
 # NETWORK
 network_manager=nova.network.manager.FlatDHCPManager
 force_dhcp_release=True
 dhcpbridge_flagfile=/etc/nova/nova.conf
 firewall_driver=nova.virt.libvirt.firewall.IptablesFirewallDriver
 # Change my_ip to match each host
-my_ip=192.168.0.103
+my_ip={{ pillar['nova']['address'] }}
 public_interface=eth0
 flat_network_bridge=br100
 flat_interface=eth0
-fixed_range=192.168.100.0/24
+fixed_range= {{ pillar['nova']['network_range']}}
 # NOVNC CONSOLE
-novncproxy_base_url=http://192.168.0.103:6080/vnc_auto.html
+novncproxy_base_url=http://{{ pillar['nova']['address'] }}:6080/vnc_auto.html
 # Change vncserver_proxyclient_address and vncserver_listen to match each compute host
-vncserver_proxyclient_address=192.168.0.103
-vncserver_listen=192.168.0.103
+vncserver_proxyclient_address={{ pillar['nova']['address'] }}
+vncserver_listen={{ pillar['nova']['address'] }}
 
 # AUTHENTICATION
 auth_strategy=keystone
